--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +483,7 @@
        "[16705 rows x 42 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -745,7 +745,7 @@
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +778,7 @@
        " 'longitude': None}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1189,7 @@
        "RangeIndex(start=0, stop=15848, step=1)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1201,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -1436,7 +1436,7 @@
        "[5 rows x 50 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1451,7 +1451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1468,7 +1468,7 @@
        "       'medical'], dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1479,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1904,7 +1904,7 @@
        "[228 rows x 50 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1915,7 +1915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2327,7 +2327,7 @@
        "[9937 rows x 50 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2340,7 +2340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2357,7 +2357,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2368,7 +2368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2780,7 +2780,7 @@
        "[9937 rows x 51 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2793,7 +2793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2814,7 +2814,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2825,7 +2825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2859,226 +2859,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>_id</th>\n",
-       "      <th>name</th>\n",
-       "      <th>permalink</th>\n",
-       "      <th>crunchbase_url</th>\n",
-       "      <th>homepage_url</th>\n",
-       "      <th>blog_url</th>\n",
-       "      <th>blog_feed_url</th>\n",
-       "      <th>twitter_username</th>\n",
-       "      <th>category_code</th>\n",
-       "      <th>number_of_employees</th>\n",
-       "      <th>...</th>\n",
-       "      <th>address1</th>\n",
-       "      <th>address2</th>\n",
-       "      <th>zip_code</th>\n",
-       "      <th>city</th>\n",
-       "      <th>state_code</th>\n",
-       "      <th>country_code</th>\n",
-       "      <th>latitude</th>\n",
-       "      <th>longitude</th>\n",
-       "      <th>Tech/Other</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>52cdef7c4bab8bd675297d91</td>\n",
-       "      <td>Geni</td>\n",
-       "      <td>geni</td>\n",
-       "      <td>http://www.crunchbase.com/company/geni</td>\n",
-       "      <td>http://www.geni.com</td>\n",
-       "      <td>http://blog.geni.com</td>\n",
-       "      <td>http://blog.geni.com/index.rdf</td>\n",
-       "      <td>geni</td>\n",
-       "      <td>web</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>9229 W. Sunset Blvd.</td>\n",
-       "      <td></td>\n",
-       "      <td>90069</td>\n",
-       "      <td>West Hollywood</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>34.090368</td>\n",
-       "      <td>-118.393064</td>\n",
-       "      <td>Tech</td>\n",
-       "      <td>POINT (-118.39306 34.09037)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>52cdef7c4bab8bd675297d96</td>\n",
-       "      <td>Gizmoz</td>\n",
-       "      <td>gizmoz</td>\n",
-       "      <td>http://www.crunchbase.com/company/gizmoz</td>\n",
-       "      <td>http://gizmoz.com</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>None</td>\n",
-       "      <td>web</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "      <td>Menlo Park</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>37.484130</td>\n",
-       "      <td>-122.169472</td>\n",
-       "      <td>Tech</td>\n",
-       "      <td>POINT (-122.16947 37.48413)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>52cdef7c4bab8bd675297d95</td>\n",
-       "      <td>StumbleUpon</td>\n",
-       "      <td>stumbleupon</td>\n",
-       "      <td>http://www.crunchbase.com/company/stumbleupon</td>\n",
-       "      <td>http://www.stumbleupon.com</td>\n",
-       "      <td>http://www.stumbleupon.com/blog</td>\n",
-       "      <td></td>\n",
-       "      <td>stumbleupon</td>\n",
-       "      <td>web</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>San Francisco</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>37.775196</td>\n",
-       "      <td>-122.419204</td>\n",
-       "      <td>Tech</td>\n",
-       "      <td>POINT (-122.41920 37.77520)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>52cdef7c4bab8bd675297d99</td>\n",
-       "      <td>Lala</td>\n",
-       "      <td>lala</td>\n",
-       "      <td>http://www.crunchbase.com/company/lala</td>\n",
-       "      <td>http://www.lala.com</td>\n",
-       "      <td>http://www.lala.com/#blog</td>\n",
-       "      <td>http://www.lala.com/#blog</td>\n",
-       "      <td>None</td>\n",
-       "      <td>games_video</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>...</td>\n",
-       "      <td>209 Hamilton Ave</td>\n",
-       "      <td>Suite #200</td>\n",
-       "      <td>94301</td>\n",
-       "      <td>Palo Alto</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>37.451151</td>\n",
-       "      <td>-122.154369</td>\n",
-       "      <td>Tech</td>\n",
-       "      <td>POINT (-122.15437 37.45115)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>52cdef7c4bab8bd675297d9c</td>\n",
-       "      <td>MeetMoi</td>\n",
-       "      <td>meetmoi</td>\n",
-       "      <td>http://www.crunchbase.com/company/meetmoi</td>\n",
-       "      <td>http://www.meetmoi.com</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>meetmoi</td>\n",
-       "      <td>social</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td>New York City</td>\n",
-       "      <td>NY</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>40.757929</td>\n",
-       "      <td>-73.985506</td>\n",
-       "      <td>Tech</td>\n",
-       "      <td>POINT (-73.98551 40.75793)</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 52 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                        _id         name    permalink  \\\n",
-       "0  52cdef7c4bab8bd675297d91         Geni         geni   \n",
-       "1  52cdef7c4bab8bd675297d96       Gizmoz       gizmoz   \n",
-       "2  52cdef7c4bab8bd675297d95  StumbleUpon  stumbleupon   \n",
-       "3  52cdef7c4bab8bd675297d99         Lala         lala   \n",
-       "4  52cdef7c4bab8bd675297d9c      MeetMoi      meetmoi   \n",
-       "\n",
-       "                                  crunchbase_url                homepage_url  \\\n",
-       "0         http://www.crunchbase.com/company/geni         http://www.geni.com   \n",
-       "1       http://www.crunchbase.com/company/gizmoz           http://gizmoz.com   \n",
-       "2  http://www.crunchbase.com/company/stumbleupon  http://www.stumbleupon.com   \n",
-       "3         http://www.crunchbase.com/company/lala         http://www.lala.com   \n",
-       "4      http://www.crunchbase.com/company/meetmoi      http://www.meetmoi.com   \n",
-       "\n",
-       "                          blog_url                   blog_feed_url  \\\n",
-       "0             http://blog.geni.com  http://blog.geni.com/index.rdf   \n",
-       "1                                                                    \n",
-       "2  http://www.stumbleupon.com/blog                                   \n",
-       "3        http://www.lala.com/#blog       http://www.lala.com/#blog   \n",
-       "4                                                                    \n",
-       "\n",
-       "  twitter_username category_code  number_of_employees  ...  \\\n",
-       "0             geni           web                 18.0  ...   \n",
-       "1             None           web                  NaN  ...   \n",
-       "2      stumbleupon           web                  NaN  ...   \n",
-       "3             None   games_video                  NaN  ...   \n",
-       "4          meetmoi        social                 15.0  ...   \n",
-       "\n",
-       "               address1    address2 zip_code            city state_code  \\\n",
-       "0  9229 W. Sunset Blvd.                90069  West Hollywood         CA   \n",
-       "1                  None        None     None      Menlo Park         CA   \n",
-       "2                                              San Francisco         CA   \n",
-       "3      209 Hamilton Ave  Suite #200    94301       Palo Alto         CA   \n",
-       "4                                              New York City         NY   \n",
-       "\n",
-       "  country_code   latitude   longitude Tech/Other                     geometry  \n",
-       "0          USA  34.090368 -118.393064       Tech  POINT (-118.39306 34.09037)  \n",
-       "1          USA  37.484130 -122.169472       Tech  POINT (-122.16947 37.48413)  \n",
-       "2          USA  37.775196 -122.419204       Tech  POINT (-122.41920 37.77520)  \n",
-       "3          USA  37.451151 -122.154369       Tech  POINT (-122.15437 37.45115)  \n",
-       "4          USA  40.757929  -73.985506       Tech   POINT (-73.98551 40.75793)  \n",
-       "\n",
-       "[5 rows x 52 columns]"
+       "(2063, 52)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3089,12 +2879,13 @@
     "gdf = gpd.GeoDataFrame(df_tech_raise, geometry=gpd.points_from_xy(df_tech_raise.longitude, df_tech_raise.latitude))\n",
     "gdf.crs = {'init' :'epsg:4326'}\n",
     "gdf.reset_index(drop=True, inplace=True)\n",
-    "gdf.head()"
+    "gdf.head()\n",
+    "gdf.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3106,7 +2897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -3116,7 +2907,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-2b5abca4c79c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mairports\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcrs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcrs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-22-2b5abca4c79c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mairports\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcrs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgdf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcrs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mNameError\u001b[0m: name 'airports' is not defined"
      ]
     }
@@ -3128,7 +2919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3137,9 +2928,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.452556059830489\n"
+     ]
+    }
+   ],
    "source": [
     "distances = gdf.geometry.distance(airports.geometry[1]).min()\n",
     "distances\n",
