--- a/test2.ipynb
+++ b/test2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
        "[16705 rows x 42 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
        "[5 rows x 42 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1165,7 @@
        "[15848 rows x 51 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1179,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1231,7 +1231,7 @@
        "Name: total_money_raised, dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1242,113 +1242,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests\n",
+    "# import requests\n",
     "\n",
-    "import os\n",
-    "from dotenv import load_dotenv\n",
-    "load_dotenv()\n",
-    "token = os.getenv(\"GOOGLE\")\n",
-    "address= \"Francisco+Navacerrada+55+Madrid\"\n",
-    "url = \"https://maps.googleapis.com/maps/api/geocode/json?address={}&key={}\".format(address,token)\n",
-    "res = requests.get(url).json()\n"
+    "# import os\n",
+    "# from dotenv import load_dotenv\n",
+    "# load_dotenv()\n",
+    "# token = os.getenv(\"GOOGLE\")\n",
+    "# address= \"Francisco+Navacerrada+55+Madrid\"\n",
+    "# url = \"https://maps.googleapis.com/maps/api/geocode/json?address={}&key={}\".format(address,token)\n",
+    "# res = requests.get(url).json()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'results': [{'address_components': [{'long_name': '55',\n",
-       "     'short_name': '55',\n",
-       "     'types': ['street_number']},\n",
-       "    {'long_name': 'Calle de Francisco Navacerrada',\n",
-       "     'short_name': 'Calle de Francisco Navacerrada',\n",
-       "     'types': ['route']},\n",
-       "    {'long_name': 'Madrid',\n",
-       "     'short_name': 'Madrid',\n",
-       "     'types': ['locality', 'political']},\n",
-       "    {'long_name': 'Madrid',\n",
-       "     'short_name': 'M',\n",
-       "     'types': ['administrative_area_level_2', 'political']},\n",
-       "    {'long_name': 'Comunidad de Madrid',\n",
-       "     'short_name': 'Comunidad de Madrid',\n",
-       "     'types': ['administrative_area_level_1', 'political']},\n",
-       "    {'long_name': 'Spain',\n",
-       "     'short_name': 'ES',\n",
-       "     'types': ['country', 'political']},\n",
-       "    {'long_name': '28028', 'short_name': '28028', 'types': ['postal_code']}],\n",
-       "   'formatted_address': 'Calle de Francisco Navacerrada, 55, 28028 Madrid, Spain',\n",
-       "   'geometry': {'bounds': {'northeast': {'lat': 40.43160700000001,\n",
-       "      'lng': -3.665862},\n",
-       "     'southwest': {'lat': 40.4314192, 'lng': -3.6661511}},\n",
-       "    'location': {'lat': 40.4315121, 'lng': -3.6660077},\n",
-       "    'location_type': 'ROOFTOP',\n",
-       "    'viewport': {'northeast': {'lat': 40.43286208029151,\n",
-       "      'lng': -3.664657569708498},\n",
-       "     'southwest': {'lat': 40.43016411970851, 'lng': -3.667355530291502}}},\n",
-       "   'place_id': 'ChIJYW_ONbQoQg0ROQoK3_IKS8U',\n",
-       "   'types': ['premise']}],\n",
-       " 'status': 'OK'}"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'lat': 40.4315121, 'lng': -3.6660077}"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res[\"results\"][0][\"geometry\"][\"location\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-52-fb1c62d354ae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mres\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"results\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"formatted_address\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1357,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1769,7 +1701,7 @@
        "[5093 rows x 51 columns]"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1798,17 +1730,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import requests\n",
+    "\n",
+    "def getCoordsFor(address):\n",
+    "    url = f\"https://geocode.xyz/{address}?json=1\"\n",
+    "    res = requests.get(url)\n",
+    "    try:\n",
+    "        if res.status_code == 200:\n",
+    "            print(res.url)\n",
+    "            data = res.json()\n",
+    "            return (data.get(\"latt\",0), data.get(\"longt\",0))\n",
+    "        else:\n",
+    "            raise ValueError(f\"Api returned {res.status_code}!=200\")\n",
+    "    except:\n",
+    "        pass"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://geocode.xyz/55%20francisco%20navacerrada%20madrid?json=1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('40.43159', '-3.66605')"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "getCoordsFor(\"55 francisco navacerrada madrid\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://geocode.xyz/Wethered%20House,%20Pound%20Lane?json=1\n",
+      "https://geocode.xyz/225%20West%20Washington?json=1\n",
+      "https://geocode.xyz/505%20Montgomery%20Street?json=1\n",
+      "https://geocode.xyz/584%20Broadway?json=1\n",
+      "https://geocode.xyz/1%20Maple%20Place?json=1\n",
+      "https://geocode.xyz/4-12-25%20Minami-Azabu?json=1\n",
+      "https://geocode.xyz/Maximilianstrasse%2035a?json=1\n",
+      "https://geocode.xyz/3210%20Porter%20Drive?json=1\n",
+      "https://geocode.xyz/2%20Stephen%20Street?json=1\n",
+      "https://geocode.xyz/6725%20W%20Sunset%20Blvd?json=1\n",
+      "https://geocode.xyz/5221%20Paramount%20Parkway?json=1\n",
+      "https://geocode.xyz/594%20Broadway,%20Suite%20407?json=1\n",
+      "https://geocode.xyz/374%20Congress%20St.,%20SUITE%20304?json=1\n",
+      "https://geocode.xyz/Conalgo%20inc.%20119%20Nipigon%20Ave.?json=1\n",
+      "https://geocode.xyz/159%20Jackson%20Street?json=1\n",
+      "https://geocode.xyz/Central%20Way%20Plaza?json=1\n",
+      "https://geocode.xyz/Tsinghua%20Science%20Park%20Bldg%206?json=1\n",
+      "https://geocode.xyz/Tower%20A,%2023/F,%20Center%20Plaza?json=1\n",
+      "https://geocode.xyz/16F,%20Raffles%20City?json=1\n",
+      "https://geocode.xyz/One%20IFC%20-%2018/F?json=1\n",
+      "https://geocode.xyz/Prestige%20Sigma,%20No.%203,%201st%20Floor?json=1\n",
+      "https://geocode.xyz/Tower%20C,%20Level%209?json=1\n",
+      "https://geocode.xyz/BLOCK%20A,%20Fourth%20Floor?json=1\n",
+      "https://geocode.xyz/264-265%20Vasvani%20Chambers?json=1\n",
+      "https://geocode.xyz/6F%20Cerulean%20Tower?json=1\n",
+      "https://geocode.xyz/9F,%20Edobori%20Center%20Building?json=1\n",
+      "https://geocode.xyz/22nd%20Floor,%20Gangnam%20Finance%20Center?json=1\n",
+      "https://geocode.xyz/Level%2025%20North%20Tower?json=1\n",
+      "https://geocode.xyz/Level%2073,%20Taipei%20101%20Tower?json=1\n",
+      "https://geocode.xyz/Larsbjornsstraede%203?json=1\n",
+      "https://geocode.xyz/Luna%20House?json=1\n",
+      "https://geocode.xyz/7%20Balchug%20st.?json=1\n",
+      "https://geocode.xyz/Nevsky%2025?json=1\n",
+      "https://geocode.xyz/Torre%20Picasso?json=1\n",
+      "https://geocode.xyz/Belgrave%20House?json=1\n",
+      "https://geocode.xyz/BCE%20Place,%20TD%20Canada%20Trust%20Tower?json=1\n",
+      "https://geocode.xyz/Alicia%20M.%20De%20Justo%20350,%202%C3%82%C2%BA?json=1\n",
+      "https://geocode.xyz/Building%2030,%20MATAM,%20Advanced%20Technology%20Center?json=1\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "Api returned 403!=200",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-9f06ef018d6c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_null_address\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"coordinates\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_null_address\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maddress1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mgetCoordsFor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/.local/lib/python3.6/site-packages/pandas/core/series.py\u001b[0m in \u001b[0;36mapply\u001b[0;34m(self, func, convert_dtype, args, **kwds)\u001b[0m\n\u001b[1;32m   4043\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4044\u001b[0m                 \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobject\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4045\u001b[0;31m                 \u001b[0mmapped\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap_infer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconvert\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconvert_dtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4046\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4047\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmapped\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmapped\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mSeries\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/lib.pyx\u001b[0m in \u001b[0;36mpandas._libs.lib.map_infer\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-22-9f06ef018d6c>\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(x)\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_null_address\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"coordinates\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_null_address\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maddress1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mgetCoordsFor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-19-d22cddb988b3>\u001b[0m in \u001b[0;36mgetCoordsFor\u001b[0;34m(address)\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"latt\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"longt\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Api returned {res.status_code}!=200\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m: Api returned 403!=200"
+     ]
+    }
+   ],
+   "source": [
+    "df_null_address[\"coordinates\"] = df_null_address.address1.apply(lambda x: getCoordsFor(x))"
+   ]
   },
   {
    "cell_type": "code",
