--- a/test2.ipynb
+++ b/test2.ipynb
@@ -1246,15 +1246,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import requests\n",
+    "import requests\n",
     "\n",
-    "# import os\n",
-    "# from dotenv import load_dotenv\n",
-    "# load_dotenv()\n",
-    "# token = os.getenv(\"GOOGLE\")\n",
-    "# address= \"Francisco+Navacerrada+55+Madrid\"\n",
-    "# url = \"https://maps.googleapis.com/maps/api/geocode/json?address={}&key={}\".format(address,token)\n",
-    "# res = requests.get(url).json()\n"
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()\n",
+    "token = os.getenv(\"GOOGLE\")\n",
+    "address= \"Francisco+Navacerrada+55+Madrid\"\n",
+    "url = \"https://maps.googleapis.com/maps/api/geocode/json?address={}&key={}\".format(address,token)\n",
+    "res = requests.get(url).json()\n"
    ]
   },
   {
